refactor(backend): modularize architecture and migrate repositories to modules
Migrate the monolithic repository structure to a modular architecture by
moving all repositories into their respective module infrastructure
packages. This change improves domain encapsulation and follows a
cleaner hexagonal/layered architecture pattern.

Key changes:
- Relocated all interfaces from `com.S_Health.GenderHealthCare.repository`
  to module-specific `infrastructure.persistence` packages.
- Updated all service layer dependencies to use the new modularized
  repository paths.
- Refactored `AuthenticationService` to remove `UserDetailsService`
  implementation in favor of a dedicated `AuthenticationUserDetailsService`.
- Replaced `AuthUtil` with `CurrentUserProvider` for better testability
  and security context management.
- Updated `SecurityConfig` to use `UserDetailsService` and adjusted
  endpoint authorization rules.
- Enhanced `VNPayService` with amount validation to prevent mismatch
  vulnerabilities.
- Updated documentation and configuration files to reflect the new
  project structure and deployment guidance.
- Added H2 and Spring Security test dependencies for improved integration
  testing.