@@ -1,36 +1,38 @@
 package com.S_Health.GenderHealthCare.modules.appointment.service;
 
-import com.S_Health.GenderHealthCare.modules.appointment.dto.response.AppointmentResponse;
-import com.S_Health.GenderHealthCare.modules.appointment.dto.response.AppointmentDetailResponse;
-import com.S_Health.GenderHealthCare.modules.medical.dto.response.BasicMedicalProfileResponse;
-import com.S_Health.GenderHealthCare.modules.appointment.dto.response.PatientHistoryResponse;
-import com.S_Health.GenderHealthCare.modules.medical.dto.response.MedicalResultResponse;
-import com.S_Health.GenderHealthCare.modules.medical.dto.response.MedicalProfileResponse;
 import com.S_Health.GenderHealthCare.common.exception.DomainException;
+import com.S_Health.GenderHealthCare.common.exception.ErrorCode;
+import com.S_Health.GenderHealthCare.common.security.CurrentUserProvider;
 import com.S_Health.GenderHealthCare.modules.appointment.AppointmentMessages;
 import com.S_Health.GenderHealthCare.modules.appointment.domain.Appointment;
 import com.S_Health.GenderHealthCare.modules.appointment.domain.AppointmentDetail;
 import com.S_Health.GenderHealthCare.modules.appointment.dto.request.AppointmentScheduleQuery;
+import com.S_Health.GenderHealthCare.modules.appointment.dto.response.AppointmentDetailResponse;
+import com.S_Health.GenderHealthCare.modules.appointment.dto.response.AppointmentResponse;
+import com.S_Health.GenderHealthCare.modules.appointment.dto.response.PatientHistoryResponse;
 import com.S_Health.GenderHealthCare.modules.appointment.enums.AppointmentStatus;
+import com.S_Health.GenderHealthCare.modules.appointment.infrastructure.persistence.AppointmentDetailRepository;
+import com.S_Health.GenderHealthCare.modules.appointment.infrastructure.persistence.AppointmentRepository;
+import com.S_Health.GenderHealthCare.modules.catalog.dto.response.SimpleRoomResponse;
 import com.S_Health.GenderHealthCare.modules.medical.domain.MedicalProfile;
 import com.S_Health.GenderHealthCare.modules.medical.domain.MedicalResult;
+import com.S_Health.GenderHealthCare.modules.medical.dto.response.BasicMedicalProfileResponse;
+import com.S_Health.GenderHealthCare.modules.medical.dto.response.MedicalProfileResponse;
+import com.S_Health.GenderHealthCare.modules.medical.dto.response.MedicalResultResponse;
+import com.S_Health.GenderHealthCare.modules.medical.infrastructure.persistence.MedicalProfileRepository;
+import com.S_Health.GenderHealthCare.modules.medical.infrastructure.persistence.MedicalResultRepository;
 import com.S_Health.GenderHealthCare.modules.user.domain.User;
 import com.S_Health.GenderHealthCare.modules.user.enums.UserRole;
-import com.S_Health.GenderHealthCare.repository.AppointmentDetailRepository;
-import com.S_Health.GenderHealthCare.repository.AppointmentRepository;
-import com.S_Health.GenderHealthCare.repository.MedicalProfileRepository;
-import com.S_Health.GenderHealthCare.repository.MedicalResultRepository;
-import com.S_Health.GenderHealthCare.utils.AuthUtil;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import com.S_Health.GenderHealthCare.common.exception.ErrorCode;
 
 @Service
 @Transactional(readOnly = true)
@@ -40,7 +42,7 @@ public class AppointmentQueryService {
     private final MedicalResultRepository medicalResultRepository;
     private final MedicalProfileRepository medicalProfileRepository;
     private final ModelMapper modelMapper;
-    private final AuthUtil authUtil;
+    private final CurrentUserProvider currentUserProvider;
 
     public AppointmentQueryService(
             AppointmentRepository appointmentRepository,
@@ -48,42 +50,21 @@ public class AppointmentQueryService {
             MedicalResultRepository medicalResultRepository,
             MedicalProfileRepository medicalProfileRepository,
             ModelMapper modelMapper,
-            AuthUtil authUtil) {
+            CurrentUserProvider currentUserProvider) {
         this.appointmentRepository = appointmentRepository;
         this.appointmentDetailRepository = appointmentDetailRepository;
         this.medicalResultRepository = medicalResultRepository;
         this.medicalProfileRepository = medicalProfileRepository;
         this.modelMapper = modelMapper;
-        this.authUtil = authUtil;
+        this.currentUserProvider = currentUserProvider;
     }
 
     public AppointmentResponse getAppointmentById(long id) {
         Appointment appointment = appointmentRepository.findById(id)
                 .orElseThrow(() -> new DomainException(ErrorCode.NOT_FOUND, AppointmentMessages.APPOINTMENT_NOT_FOUND));
-
-        List<AppointmentDetail> appointmentDetails = appointmentDetailRepository
+        List<AppointmentDetail> details = appointmentDetailRepository
                 .findByAppointmentAndIsActiveTrue(appointment);
-        List<AppointmentDetailResponse> detailDtos = new ArrayList<>();
-
-        for (AppointmentDetail appointmentDetail : appointmentDetails) {
-            MedicalResult medicalResult = medicalResultRepository.findByAppointmentDetail(appointmentDetail)
-                    .orElseThrow(() -> new DomainException(ErrorCode.NOT_FOUND, AppointmentMessages.RESULT_NOT_FOUND));
-
-            AppointmentDetailResponse detailDto = modelMapper.map(appointmentDetail, AppointmentDetailResponse.class);
-            detailDto.setConsultantName(appointmentDetail.getConsultant().getFullname());
-            detailDto.setServiceName(appointmentDetail.getService().getName());
-            detailDto.setMedicalResult(modelMapper.map(medicalResult, MedicalResultResponse.class));
-            detailDto.setRoom(mapRoomToSimpleDto(appointmentDetail.getRoom()));
-            detailDtos.add(detailDto);
-        }
-
-        AppointmentResponse appointmentDto = modelMapper.map(appointment, AppointmentResponse.class);
-        appointmentDto.setCustomerId(appointment.getCustomer().getId());
-        appointmentDto.setCustomerName(appointment.getCustomer().getFullname());
-        appointmentDto.setServiceName(appointment.getService().getName());
-        appointmentDto.setAppointmentDetails(detailDtos);
-        appointmentDto.setCustomerMedicalProfile(getBasicMedicalProfile(appointment.getCustomer().getId()));
-        return appointmentDto;
+        return mapAppointments(List.of(appointment), Map.of(appointment, details), true).get(0);
     }
 
     public PatientHistoryResponse getPatientHistoryFromAppointment(Long appointmentId) {
@@ -97,27 +78,18 @@ public class AppointmentQueryService {
 
         List<Appointment> pastAppointments = appointmentRepository
                 .findByMedicalProfileAndStatusAndIsActiveTrue(medicalProfile, AppointmentStatus.COMPLETED);
-        List<AppointmentResponse> pastAppointmentDtos = pastAppointments.stream()
-                .map(pastAppointment -> getAppointmentById(pastAppointment.getId()))
-                .collect(Collectors.toList());
 
         PatientHistoryResponse historyDto = new PatientHistoryResponse();
         historyDto.setMedicalProfile(modelMapper.map(medicalProfile, MedicalProfileResponse.class));
-        historyDto.setPastAppointments(pastAppointmentDtos);
+        historyDto.setPastAppointments(convertToDto(pastAppointments));
         return historyDto;
     }
 
     public List<AppointmentResponse> getAppointmentsByStatus(AppointmentStatus status) {
-        User currentUser = authUtil.getCurrentUser();
-        List<Appointment> appointments;
-
-        if (currentUser.getRole() == UserRole.CUSTOMER) {
-            appointments = appointmentRepository
-                    .findByCustomerAndStatusAndIsActiveTrue(currentUser, status);
-        } else {
-            appointments = appointmentRepository.findByStatusAndIsActiveTrue(status);
-        }
-
+        User currentUser = currentUserProvider.requireUser();
+        List<Appointment> appointments = currentUser.getRole() == UserRole.CUSTOMER
+                ? appointmentRepository.findByCustomerAndStatusAndIsActiveTrue(currentUser, status)
+                : appointmentRepository.findByStatusAndIsActiveTrue(status);
         return convertToDto(appointments);
     }
 
@@ -125,80 +97,134 @@ public class AppointmentQueryService {
             AppointmentScheduleQuery request) {
         LocalDate date = request.getDate();
         AppointmentStatus detailStatus = request.getStatus();
-        User currentDoctor = authUtil.getCurrentUser();
+        User currentDoctor = currentUserProvider.requireUser();
 
-        List<AppointmentDetail> filteredDetails;
-        if (detailStatus != null) {
-            filteredDetails = appointmentDetailRepository
-                    .findByConsultant_idAndSlotDateAndStatus(currentDoctor.getId(), date, detailStatus);
-        } else {
-            filteredDetails = appointmentDetailRepository
-                    .findByConsultant_idAndSlotDate(currentDoctor.getId(), date);
-        }
+        List<AppointmentDetail> filteredDetails = detailStatus != null
+                ? appointmentDetailRepository.findByConsultant_idAndSlotDateAndStatus(
+                currentDoctor.getId(), date, detailStatus)
+                : appointmentDetailRepository.findByConsultant_idAndSlotDate(
+                currentDoctor.getId(), date);
 
-        Map<Appointment, List<AppointmentDetail>> appointmentDetailsMap = filteredDetails.stream()
+        Map<Appointment, List<AppointmentDetail>> detailsByAppointment = filteredDetails.stream()
                 .filter(detail -> detail.getAppointment().getIsActive())
                 .collect(Collectors.groupingBy(AppointmentDetail::getAppointment));
 
-        return appointmentDetailsMap.entrySet().stream()
-                .map(entry -> mapAppointmentWithDetails(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+        return mapAppointments(
+                List.copyOf(detailsByAppointment.keySet()),
+                detailsByAppointment,
+                false
+        );
     }
 
     private List<AppointmentResponse> convertToDto(List<Appointment> appointments) {
+        if (appointments.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<AppointmentDetail> details = appointmentDetailRepository
+                .findByAppointmentInAndIsActiveTrue(appointments);
+        Map<Appointment, List<AppointmentDetail>> detailsByAppointment = details.stream()
+                .collect(Collectors.groupingBy(AppointmentDetail::getAppointment));
+        return mapAppointments(appointments, detailsByAppointment, false);
+    }
+
+    private List<AppointmentResponse> mapAppointments(
+            List<Appointment> appointments,
+            Map<Appointment, List<AppointmentDetail>> detailsByAppointment,
+            boolean requireMedicalResult) {
+        if (appointments.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<AppointmentDetail> allDetails = detailsByAppointment.values().stream()
+                .flatMap(List::stream)
+                .toList();
+        Map<Long, MedicalResult> resultsByDetailId = allDetails.isEmpty()
+                ? Collections.emptyMap()
+                : medicalResultRepository.findByAppointmentDetailIn(allDetails).stream()
+                .collect(Collectors.toMap(
+                        result -> result.getAppointmentDetail().getId(),
+                        Function.identity(),
+                        (first, ignored) -> first
+                ));
+        Map<Long, BasicMedicalProfileResponse> profilesByCustomerId = loadBasicMedicalProfiles(appointments);
+
         return appointments.stream()
-                .map(appointment -> {
-                    List<AppointmentDetail> details = appointmentDetailRepository
-                            .findByAppointmentAndIsActiveTrue(appointment);
-                    return mapAppointmentWithDetails(appointment, details);
-                })
-                .collect(Collectors.toList());
+                .map(appointment -> mapAppointmentWithDetails(
+                        appointment,
+                        detailsByAppointment.getOrDefault(appointment, Collections.emptyList()),
+                        resultsByDetailId,
+                        profilesByCustomerId,
+                        requireMedicalResult
+                ))
+                .toList();
     }
 
     private AppointmentResponse mapAppointmentWithDetails(
             Appointment appointment,
-            List<AppointmentDetail> details) {
+            List<AppointmentDetail> details,
+            Map<Long, MedicalResult> resultsByDetailId,
+            Map<Long, BasicMedicalProfileResponse> profilesByCustomerId,
+            boolean requireMedicalResult) {
         AppointmentResponse appointmentDto = modelMapper.map(appointment, AppointmentResponse.class);
         appointmentDto.setCustomerId(appointment.getCustomer().getId());
         appointmentDto.setCustomerName(appointment.getCustomer().getFullname());
         appointmentDto.setServiceName(appointment.getService().getName());
-
-        List<AppointmentDetailResponse> detailDtos = details.stream()
-                .map(this::mapDetail)
-                .collect(Collectors.toList());
-        appointmentDto.setAppointmentDetails(detailDtos);
-        appointmentDto.setCustomerMedicalProfile(getBasicMedicalProfile(appointment.getCustomer().getId()));
+        appointmentDto.setAppointmentDetails(details.stream()
+                .map(detail -> mapDetail(detail, resultsByDetailId, requireMedicalResult))
+                .toList());
+        appointmentDto.setCustomerMedicalProfile(
+                profilesByCustomerId.get(appointment.getCustomer().getId())
+        );
         return appointmentDto;
     }
 
-    private AppointmentDetailResponse mapDetail(AppointmentDetail detail) {
+    private AppointmentDetailResponse mapDetail(
+            AppointmentDetail detail,
+            Map<Long, MedicalResult> resultsByDetailId,
+            boolean requireMedicalResult) {
         AppointmentDetailResponse detailDto = modelMapper.map(detail, AppointmentDetailResponse.class);
         detailDto.setConsultantName(detail.getConsultant().getFullname());
         detailDto.setServiceName(detail.getService().getName());
         detailDto.setRoom(mapRoomToSimpleDto(detail.getRoom()));
-        medicalResultRepository.findByAppointmentDetail(detail)
-                .ifPresent(result -> detailDto.setMedicalResult(modelMapper.map(result, MedicalResultResponse.class)));
+
+        MedicalResult medicalResult = resultsByDetailId.get(detail.getId());
+        if (requireMedicalResult && medicalResult == null) {
+            throw new DomainException(ErrorCode.NOT_FOUND, AppointmentMessages.RESULT_NOT_FOUND);
+        }
+        if (medicalResult != null) {
+            detailDto.setMedicalResult(modelMapper.map(medicalResult, MedicalResultResponse.class));
+        }
         return detailDto;
     }
 
-    private com.S_Health.GenderHealthCare.modules.catalog.dto.response.SimpleRoomResponse mapRoomToSimpleDto(
-            com.S_Health.GenderHealthCare.modules.catalog.domain.Room room) {
+    private SimpleRoomResponse mapRoomToSimpleDto(com.S_Health.GenderHealthCare.modules.catalog.domain.Room room) {
         if (room == null) {
             return null;
         }
-
-        com.S_Health.GenderHealthCare.modules.catalog.dto.response.SimpleRoomResponse roomDto =
-                modelMapper.map(room, com.S_Health.GenderHealthCare.modules.catalog.dto.response.SimpleRoomResponse.class);
+        SimpleRoomResponse roomDto = modelMapper.map(room, SimpleRoomResponse.class);
         if (room.getSpecialization() != null) {
             roomDto.setSpecializationName(room.getSpecialization().getName());
         }
         return roomDto;
     }
 
-    private BasicMedicalProfileResponse getBasicMedicalProfile(Long customerId) {
-        List<MedicalProfile> profiles = medicalProfileRepository
-                .findByCustomerIdAndIsActiveTrue(customerId);
+    private Map<Long, BasicMedicalProfileResponse> loadBasicMedicalProfiles(List<Appointment> appointments) {
+        List<Long> customerIds = appointments.stream()
+                .map(appointment -> appointment.getCustomer().getId())
+                .distinct()
+                .toList();
+        if (customerIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
 
+        return medicalProfileRepository.findByCustomerIdInAndIsActiveTrue(customerIds).stream()
+                .collect(Collectors.groupingBy(profile -> profile.getCustomer().getId()))
+                .entrySet().stream()
+                .collect(Collectors.toMap(Map.Entry::getKey, entry -> selectBasicMedicalProfile(entry.getValue())));
+    }
+
+    private BasicMedicalProfileResponse selectBasicMedicalProfile(List<MedicalProfile> profiles) {
         if (profiles.isEmpty()) {
             return null;
         }
@@ -210,7 +236,6 @@ public class AppointmentQueryService {
                         || profile.getSpecialNotes() != null)
                 .max((first, second) -> first.getUpdatedAt().compareTo(second.getUpdatedAt()))
                 .orElse(profiles.get(0));
-
         return modelMapper.map(latestProfile, BasicMedicalProfileResponse.class);
     }
 }
